@@ -90,6 +90,7 @@
 	* only keeps one outstanding duplicate request per peer
 	  reduces waste download, specifically when streaming
 
+	* disabled feature to drop requests after having been skipped too many times
 	* fixed range request bug for files larger than 2 GB in web seeds
 
 release 0.14.8
